# flip

./: .gitignore  Makefile  pyproject.toml
flip/: __main__.py  config.py  console.py  consts.py  flipper.py  models.py
